# wordclock

./: Cargo.toml  package-lock.json  package.json
.github/workflows/: production.yml
deploy/: deploy_raspi.sh
led-tester/: Cargo.toml
led-tester/src/: main.rs
src/: led.rs  lib.rs  main.rs  pattern.rs  time.rs
src/pattern/: de.txt  de_words.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: clock.ts  main.ts  style.css
