[package]
name = "wordclock"
version = "0.1.0"
authors = ["Dennis Fiedler"]
description = "Wordclock"
license = "MIT/Apache-2.0"
repository = "https://github.com/dennisMeeQ/wordclock"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
wasm-bindgen = "0.2.87"
ws2818-rgb-led-spi-driver = "2.0.0"
