[package]
name = "led-tester"
version = "0.1.0"
authors = ["Dennis Fiedler"]
description = "Test LEDs on a WS2812B LED strip"
license = "MIT/Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
rand = "0.8.5"
ws2818-rgb-led-spi-driver = "2.0.0"
